java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementDefaultMethods2.pass
package org.netbeans.test.java.hints;

/**
 *
 * @author sdedic
 */
public class ImplementDefaultMethods2 implements java.util.Iterator {

    @Override
    public boolean hasNext() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    @Override
    public Object next() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    @Override
    public void remove() {
        Iterator.super.remove();
    }
    
}
